Fix Production libwebrtc build after r213418 https://bugs.webkit.org/show_bug.cgi?id=169217 <rdar://problem/30876775>

Reviewed by Tim Horton.

* Source/webrtc/base/checks.h:
* libwebrtc.xcodeproj/project.pbxproj:
MakeCheckOpString was a weak export, and it wasn't needed.
There is an internal build that checks for weak exports and fails if there is one.
Run the check-for-weak-vtables-and-externals script for libwebrtc.dylib like we do for the other frameworks.



Canonical link: https://commits.webkit.org/186232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213468 268f45cc-cd09-0410-ab3c-d52691b4dbfc